{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 115,
  "lineage": "12272343-cc01-17dc-94a5-95e6a1bd2cc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Rajubhai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca570c1b6d79f36",
            "arn": "arn:aws:ec2:ap-south-1:147997146401:instance/i-0cb9bd4fe0c6209c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb9bd4fe0c6209c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f562409c8584b88"
              }
            ],
            "primary_network_interface_id": "eni-07f562409c8584b88",
            "private_dns": "ip-10-0-0-44.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.44",
            "public_ip": "15.206.124.9",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a12f9391160e0535",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3945d8266fc87c6",
            "tags": {
              "Name": "Lalubhai"
            },
            "tags_all": {
              "Name": "Lalubhai"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1ccd70b7647f612"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "147997146401",
            "id": "i-0cb9bd4fe0c6209c5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.Rajubhaicha-Sg",
            "aws_subnet.public_subnet",
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Lalu-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:147997146401:internet-gateway/igw-03b96de4008b25ac0",
            "id": "igw-03b96de4008b25ac0",
            "owner_id": "147997146401",
            "region": "ap-south-1",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW"
            },
            "vpc_id": "vpc-03dbd68501c4e2953"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:147997146401:route-table/rtb-0abcf1a5da74a2290",
            "id": "rtb-0abcf1a5da74a2290",
            "owner_id": "147997146401",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b96de4008b25ac0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-RT"
            },
            "tags_all": {
              "Name": "My-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dbd68501c4e2953"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "147997146401",
            "id": "rtb-0abcf1a5da74a2290",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.Lalu-IGW",
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2f3ac24ec87f54",
            "region": "ap-south-1",
            "route_table_id": "rtb-0abcf1a5da74a2290",
            "subnet_id": "subnet-0a3945d8266fc87c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Lalu-IGW",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Rajubhaicha-Sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:147997146401:security-group/sg-0d1ccd70b7647f612",
            "description": "New-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1ccd70b7647f612",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound rules",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound rules",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Raju-Sg",
            "name_prefix": "",
            "owner_id": "147997146401",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dbd68501c4e2953"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "147997146401",
            "id": "sg-0d1ccd70b7647f612",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:147997146401:subnet/subnet-0a3945d8266fc87c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3945d8266fc87c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147997146401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "My-public-subnet"
            },
            "tags_all": {
              "Name": "My-public-subnet"
            },
            "vpc_id": "vpc-03dbd68501c4e2953"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "147997146401",
            "id": "subnet-0a3945d8266fc87c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.Lalu-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Lalu-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:147997146401:vpc/vpc-03dbd68501c4e2953",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044dba5cb75530d9c",
            "default_route_table_id": "rtb-06580f8717ba9a6a9",
            "default_security_group_id": "sg-0cc2ba56b1b760b60",
            "dhcp_options_id": "dopt-08a48ca9e48f696d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dbd68501c4e2953",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06580f8717ba9a6a9",
            "owner_id": "147997146401",
            "region": "ap-south-1",
            "tags": {
              "Name": "Lalucha-VPC"
            },
            "tags_all": {
              "Name": "Lalucha-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "147997146401",
            "id": "vpc-03dbd68501c4e2953",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}